--- a/style.css
+++ b/style.css
@@ -65,15 +65,15 @@ textarea{
   color: white;
 }
 
-.saveBtn i:hover {
-  font-size: 20px;
-  transition: all .3s ease-in-out;
+.hover:hover {
+  font-size: 35px;
+  transition: all .1s ease-in-out;
 }
 
 i {
   text-align: center;
   width: 100%;
-  height: 30px;
+  height: 5px;
   vertical-align: top
   
 }
